# Poursuite

./: .gitignore  DatabaseVacuum.py  DownloadDJE.py  PDFtoDatabase v3.py  SplitDatabase.py  TEST.py  pyproject.toml  refactor_plan.md
maintenance/: ExtractDataBatch.py  NewSearchEngine.py  Static Database Optimizer v3.py
poursuite/: __init__.py  cli.py  config.py  models.py  utils.py
poursuite/api/: auth.py  main.py  schemas.py
poursuite/api/routes/: extract.py  frontend.py  search.py  stats.py
poursuite/db/: connection.py  search.py
poursuite/scraper/: csv_extractor.py  esaj.py
